tests/ui/limits/huge-enum.stderr
error: values of the type `Option<TYPE>` are too big for the current architecture
  --> $DIR/huge-enum.rs:12:9
   |
LL |     let big: BIG = None;
   |         ^^^

error: aborting due to previous error

